refine the analysis

--- a/notebooks/likelihood_cosine_similarity_analysis.ipynb
+++ b/notebooks/likelihood_cosine_similarity_analysis.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "39aeb877",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "791ec559",
    "metadata": {},
    "outputs": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "9c02aa46",
    "metadata": {},
    "outputs": [
@@ -307,24 +307,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "target_lang\n",
-      "eng    0.803977\n",
-      "guj    0.352796\n",
-      "nld    0.350462\n",
-      "kea    0.348699\n",
-      "fao    0.346217\n",
-      "bul    0.339673\n",
-      "deu    0.332454\n",
-      "lus    0.324772\n",
-      "gaz    0.319974\n",
-      "lit    0.319313\n",
+      "target_lang_script\n",
+      "eng_Latn    0.803977\n",
+      "guj_Gujr    0.352796\n",
+      "nld_Latn    0.350462\n",
+      "kea_Latn    0.348699\n",
+      "fao_Latn    0.346217\n",
+      "bjn_Arab    0.340867\n",
+      "bul_Cyrl    0.339673\n",
+      "deu_Latn    0.332454\n",
+      "knc_Latn    0.328460\n",
+      "lus_Latn    0.324772\n",
       "Name: cosine_similarity, dtype: float64\n"
      ]
     }
    ],
    "source": [
     "# Grouping by language to find patterns in cosine similarity\n",
-    "lang_similarity_stats = result_df.groupby(\"target_lang\")[\"cosine_similarity\"].mean().sort_values(ascending=False)\n",
+    "result_df[\"target_lang_script\"] = result_df[\"target_lang\"] + \"_\" + result_df[\"target_script\"]\n",
+    "lang_similarity_stats = result_df.groupby(\"target_lang_script\")[\"cosine_similarity\"].mean().sort_values(ascending=False)\n",
     "\n",
     "# Print the top 10 languages with the highest average cosine similarity to English\n",
     "print(lang_similarity_stats.head(10))"
@@ -339,43 +340,9 @@
     "\n",
     "- **eng (0.804)**: English has the highest cosine similarity to itself, as expected. This confirms that Aya's token generation in English is most aligned with English.\n",
     "- **Other languages (e.g., guj, nld, kea)** show **lower cosine similarities** compared to English. For example, **Gujarati (guj)** has a similarity of **0.352**, and **Dutch (nld)** has a similarity of **0.350**. These scores indicate that while these languages are somewhat close to English in terms of token probability distributions, there is a noticeable difference.\n",
-    "- The **lower-ranked languages** (such as **lit**, **gaz**, and **lus**) have **even smaller cosine similarities** (all below **0.32**), suggesting that their token distributions are more distinct from English.\n",
+    "- The **lower-ranked languages** (such as **bul**, **deu**, **knc**, and **lus**) have **even smaller cosine similarities** (all below **0.34**), suggesting that their token distributions are more distinct from English.\n",
     "\n",
     "Aya's token generation for English and certain other languages (like **guj**, **nld**, and **kea**) shows noticeable alignment, with these languages showing a **moderate similarity to English**. However, the differences in similarity across languages also indicate that Aya's processing is not entirely English-first but still retains a bias towards English in certain cases."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f8acc200",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "target_lang\n",
-      "eng    0.803977\n",
-      "Name: cosine_similarity, dtype: float64\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Filtering languages where the average cosine similarity is above a certain threshold\n",
-    "high_bias_languages = lang_similarity_stats[lang_similarity_stats > 0.8]\n",
-    "\n",
-    "# Displaying the results\n",
-    "print(high_bias_languages)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aad31a3d",
-   "metadata": {},
-   "source": [
-    "This output indicates the cosine similarity score between English and itself, which is **1.000** as expected. Since we're comparing English against its own tokens, the model will have a perfect match in terms of token probabilities.\n",
-    "\n",
-    "This is the baseline scenario, confirming that Aya's internal model aligns perfectly with English when generating tokens. This result is expected, and serves as a reference point for comparing similarity with other languages."
    ]
   },
   {
@@ -385,17 +352,23 @@
    "source": [
     "# ✨ **Summary Conclusion:**\n",
     "\n",
-    "- Aya exhibits a **strong English-first bias** for some languages, such as English itself (cosine similarity = 1.000), where token distributions are almost identical.\n",
+    "- Aya exhibits a **strong English-first bias** for some languages, such as English itself (cosine similarity = 0.803), where token distributions are almost identical.\n",
     "- The majority of languages, however, show relatively low cosine similarity to English, especially those with values below 0.4 (e.g., **guj**, **nld**, **kea**).\n",
     "- There is **good but imperfect semantic consistency** across languages, with some languages exhibiting closer alignment with English token distributions than others.\n",
-    "- The **average cosine similarity** of **0.244** indicates that, overall, Aya doesn't consistently \"think\" in English first across languages, though there are instances of noticeable English-centric behavior for certain languages.\n",
-    "\n",
+    "- The **average cosine similarity** of **0.244** indicates that, overall, Aya doesn't consistently \"think\" in English first across languages, though there are instances of noticeable English-centric behavior for certain languages."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96e9f818",
+   "metadata": {},
+   "source": [
     "### 🎯 Main Question Answer:\n",
     "> **Does Aya \"think\" in English first via cosine similarity?**  \n",
     ">  \n",
     "> ❌ **No, Aya does not always think in English first via cosine similarity.**  \n",
     ">  \n",
-    "> While some languages like English show strong alignment (cosine similarity = 1.000), the majority of languages have noticeable differences, indicating that Aya processes languages in a more neutral or diversified manner.  \n",
+    "> The majority of languages have noticeable differences, indicating that Aya processes languages in a more neutral or diversified manner.  \n",
     ">  \n",
     "> **Aya's token generation is not consistently English-first across all languages.** There is significant variation in how different languages compare to English in terms of token likelihood distributions, with many languages showing only **moderate similarity**. This indicates that **Aya's reasoning and token generation are not fully dominated by English**, even though some bias towards English can still be observed."
    ]
